# nostr-codex-phone

./: .gitignore  README.md  pubspec.yaml  zapstore.yaml
.github/workflows/: build-apk.yml  build-macos-worker.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/nostr_codex_phone/: MainActivity.kt
android/app/src/main/kotlin/com/tidley/nostrcodexphone/: BackgroundDeliveryService.kt  MainActivity.kt
android/app/src/main/res/values/: colors.xml
integration_test/: session_fuzz_test.dart  simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: blossom_config.dart  bridge_json.dart  compact_identifier.dart  conversation_message.dart  inactive_reply_notice.dart  incoming_route.dart  live_recording_waveform.dart  main_widgets.dart  media_models.dart  repo_choice.dart  repo_target.dart  repo_target_merge.dart  text_utils.dart  tool_result_models.dart  voice_recording.dart  working_animation.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: nostr.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
rust/: Cargo.toml
rust/src/: audio_crypto.rs  blossom.rs  codex.rs  frb_generated.rs  lib.rs  nostr_client.rs  protocol.rs  transcribe.rs
rust/src/api/: mod.rs  nostr.rs
rust/tests/: blossom_upload_harness.rs  blossom_upload_public.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_nostr_codex_phone.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_nostr_codex_phone.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: bootstrap-worker.sh  install-repo-service.sh  install-worker-service.sh  package-release-assets.sh
test/: conversation_ordering_test.dart  widget_test.dart
